src/test/deca/context/valid/personalTests/instanceofNull.deca
// Test InstanceOf avec Null

class A{
    int a;
}

{
    println(null instanceof A);
}