src/test/deca/context/invalid/personalTests/instanceofNull.deca
class A{
    int a;
}

{
    A a = new A();
    println(a instanceof null);
}